*** empty log message ***

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,23 @@ lib/Makefile.in
 lib/kerosin/.deps
 lib/kerosin/Makefile
 lib/kerosin/Makefile.in
+lib/oxygen/.deps
+lib/oxygen/.libs
+lib/oxygen/Makefile
+lib/oxygen/Makefile.in
+lib/oxygen/liboxygen.la
+lib/oxygen/agentaspect/*.lo
+lib/oxygen/agentaspect/.deps
+lib/oxygen/agentaspect/.dirstamp
+lib/oxygen/controlaspect/*.lo
+lib/oxygen/controlaspect/.deps
+lib/oxygen/controlaspect/.dirstamp
+lib/oxygen/physicsserver/*.lo
+lib/oxygen/physicsserver/.deps
+lib/oxygen/physicsserver/.dirstamp
+lib/oxygen/sceneserver/*.lo
+lib/oxygen/sceneserver/.deps
+lib/oxygen/sceneserver/.dirstamp
 lib/salt/.deps
 lib/salt/.libs
 lib/salt/Makefile.in
