--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,44 @@ lib/Makefile.in
 lib/kerosin/.deps
 lib/kerosin/Makefile
 lib/kerosin/Makefile.in
+lib/kerosin/controlaspect/*.lo
+lib/kerosin/controlaspect/.deps
+lib/kerosin/controlaspect/.dirstamp
+lib/kerosin/fontserver/*.lo
+lib/kerosin/fontserver/.deps
+lib/kerosin/fontserver/.dirstamp
+lib/kerosin/imageserver/*.lo
+lib/kerosin/imageserver/.deps
+lib/kerosin/imageserver/.dirstamp
+lib/kerosin/inputserver/*.lo
+lib/kerosin/inputserver/.deps
+lib/kerosin/inputserver/.dirstamp
+lib/kerosin/materialserver/*.lo
+lib/kerosin/materialserver/.deps
+lib/kerosin/materialserver/.dirstamp
+lib/kerosin/openglserver/*.lo
+lib/kerosin/openglserver/.deps
+lib/kerosin/openglserver/.dirstamp
+lib/kerosin/openglserver/glextensionreg.cpp
+lib/kerosin/openglserver/glextensionreg.h
+lib/kerosin/physicsserver/*.lo
+lib/kerosin/physicsserver/.deps
+lib/kerosin/physicsserver/.dirstamp
+lib/kerosin/renderserver/*.lo
+lib/kerosin/renderserver/.deps
+lib/kerosin/renderserver/.dirstamp
+lib/kerosin/sceneserver/*.lo
+lib/kerosin/sceneserver/.deps
+lib/kerosin/sceneserver/.dirstamp
+lib/kerosin/sceneserver/helper/*.lo
+lib/kerosin/sceneserver/helper/.deps
+lib/kerosin/sceneserver/helper/.dirstamp
+lib/kerosin/soundserver/*.lo
+lib/kerosin/soundserver/.deps
+lib/kerosin/soundserver/.dirstamp
+lib/kerosin/textureserver/*.lo
+lib/kerosin/textureserver/.deps
+lib/kerosin/textureserver/.dirstamp
 lib/oxygen/.deps
 lib/oxygen/.libs
 lib/oxygen/Makefile
