--- a/utility/glextgen/glextgen.rb.in
+++ b/utility/glextgen/glextgen.rb.in
@@ -1,3 +1,5 @@
+# -*- mode: ruby; ruby-indent-level: 4 -*-
+#
 # just redirect to 'script/glextgen.rb'
 
 # the 'target' string controls whether wgl or glX extensions are considered
@@ -7,4 +9,5 @@ $target = "@GLTARGET@"
 # the following string designates the path of the 'GL/' subdirectory
 $path = "@GLDIR@/"
 
+$namespace = $*[0]
 require 'script/glextgen.rb'
