- moved check for freetype stuff into a Macro in acinclude.m4 - added check for SDL - added check for ruby (a macro in acinclude.m4)

--- a/configure.ac
+++ b/configure.ac
@@ -50,8 +50,12 @@ AC_CHECK_FILE([$GLDIR/glx.h])
 AC_CHECK_HEADER([boost/version.hpp],,
   AC_MSG_ERROR([boost library not found. Please specify the location 
 of the boost header directory using the CPPFLAGS environment variable]))
+AC_CHECK_HEADER([SDL/SDL.h],,
+  AC_MSG_ERROR([Simple DirectMedia Layer library not found. Please specify 
+                the location of the SDL header directory using the CPPFLAGS 
+                environment variable]))
 AC_CHECK_HEADERS([hash_map],,
-	AC_MSG_WARN(['hash_map' will be substituted by a 'map'. Possible fix: install stlport]))
+	AC_MSG_WARN(['hash_map' will be substituted by 'map'. Possible fix: install stlport]))
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
@@ -67,20 +71,8 @@ AC_CHECK_FUNCS([atexit floor gethostname inet_ntoa memset pow socket sqrt strchr
 
 ## checks for system services
 AC_PATH_X
-
-# check for freetype2 stuff
-AC_CHECK_PROG([FREETYPE2], [freetype-config], [yes], [no])
-if test $FREETYPE2 = "no"; then
-	AC_MSG_ERROR([need freetype2 devel library to compile])
-fi
-ac_freetype_cppflags=`freetype-config --cflags`
-ac_freetype_libadd=`freetype-config --libtool`
-AC_MSG_CHECKING([freetype include flags])
-AC_MSG_RESULT([$ac_freetype_cppflags])
-AC_SUBST(FREETYPE_CPPFLAGS, [$ac_freetype_cppflags])
-AC_MSG_CHECKING([freetype libtool file])
-AC_MSG_RESULT([$ac_freetype_libadd])
-AC_SUBST(FREETYPE_LIBADD, [$ac_freetype_libadd])
+RCSS_PATH_FREETYPE
+RCSS_PATH_RUBY
 
 # create Makefiles and other configuration files
 AC_CONFIG_FILES([Makefile \
@@ -102,6 +94,7 @@ AC_CONFIG_FILES([Makefile \
 		 plugin/survival/Makefile \
 		 app/Makefile \
 		 app/simulator/Makefile \
+		 app/zeitgeisttest/Makefile \
                  doc/Makefile \
 		 doc/Doxyfile])
 AC_OUTPUT
