--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,17 @@
 /Makefile
 /Makefile.in
 /stamp-h1
+app/Makefile
+app/Makefile.in
+app/simulator/.deps
+app/simulator/.libs
+app/simulator/Makefile
+app/simulator/Makefile.in
+app/zeitgeisttest/.deps
+app/zeitgeisttest/.libs
+app/zeitgeisttest/Makefile
+app/zeitgeisttest/Makefile.in
+app/zeitgeisttest/zeitgeisttest
 config.aux/config.guess
 config.aux/config.sub
 config.aux/depcomp
