--- a/lib/zeitgeist/Makefile.am
+++ b/lib/zeitgeist/Makefile.am
@@ -24,6 +24,9 @@ node_c.cpp \
 object.cpp \
 object_c.cpp \
 zeitgeist.cpp \
+fileserver/fileserver.cpp \
+fileserver/fileserver_c.cpp \
+fileserver/filesystem_c.cpp \
 logserver/logserver.cpp \
 logserver/logserver_c.cpp \
 logserver/logserverstreambuf.cpp \
@@ -44,6 +47,8 @@ node.h \
 object.h \
 object_c.h \
 zeitgeist.h \
+fileserver/fileserver.h \
+fileserver/filesystem.h \
 logserver/logserver.h \
 logserver/logserverstreambuf.h \
 scriptserver/scriptserver.h
