*** empty log message ***

--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,26 @@ lib/zeitgeist/scriptserver/*.la
 lib/zeitgeist/scriptserver/*.lo
 lib/zeitgeist/telnetserver/.deps
 lib/zeitgeist/telnetserver/.dirstamp
+plugin/Makefile
+plugin/Makefile.in
+plugin/filesystemrar/Makefile
+plugin/filesystemrar/Makefile.in
+plugin/filesystemstd/Makefile
+plugin/filesystemstd/Makefile.in
+plugin/filesystemzip/Makefile
+plugin/filesystemzip/Makefile.in
+plugin/inputsdl/Makefile
+plugin/inputsdl/Makefile.in
+plugin/soundsystembass/Makefile
+plugin/soundsystembass/Makefile.in
+plugin/soundsystemfmod/Makefile
+plugin/soundsystemfmod/Makefile.in
+plugin/survival/.deps
+plugin/survival/.libs
+plugin/survival/Makefile
+plugin/survival/Makefile.in
+plugin/survival/*.la
+plugin/survival/*.lo
 utility/Makefile.in
 utility/Makefile
 utility/glextgen/Makefile
