2003-09-08	Tom Howard	<tomhoward@users.sf.net>
	* ./Makefile.am
	* ./configure.ac
	* ./config.aux/cvs.am
	* ./config.aux/dist.am
	* ./config.aux/msi.am
	* ./config.aux/rpm.am
	* ./config.aux/sf.am
	Added custom maintainer targets

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,101 +8,25 @@ doc:	doc-recursive
 doc-recursive:	
 	cd doc && $(MAKE) $(AM_MAKEFLAGS) all
 
+CLEANFILES = 
 
-branch-major: commit
-	ver=`echo "@VERSION@" | sed s/\\\\.[0-9][0-9]*\\\\.[0-9][0-9]*$$//`; \
-	tag=`echo "@PACKAGE@-$$ver"`; \
-	echo ""; \
-	echo "Creating major brach: $$tag"; \
-	echo "Use 'cvs co -r $$tag @PACKAGE@' to access the branch"; \
-	echo ""; \
-	cvs tag -b "$$tag"; \
-	$(AWK) -f @srcdir@/rel.awk -v change=1 @srcdir@/configure.in > configure.tmp;
-	mv configure.tmp @srcdir@/configure.in
-	$(MAKE) $(AM_MAKEFLAGS) commit
+EXTRA_SRC_DISTS =
+EXTRA_BIN_DISTS =
+include $(top_srcdir)/config.aux/dist.am
 
-branch-minor: commit
-	ver=`echo "@VERSION@" | sed s/\\\\.[0-9][0-9]*$$//`; \
-	tag=`echo "@PACKAGE@-$$ver" | sed s/\\\\./_/g`; \
-	echo ""; \
-	echo "Creating minor brach: $$tag"; \
-	echo "Use 'cvs co -r $$tag @PACKAGE@' to access the branch"; \
-	echo ""; \
-	cvs tag -b "$$tag"; \
-	$(AWK) -f @srcdir@/rel.awk -v change=2 @srcdir@/configure.in > configure.tmp;
-	mv configure.tmp @srcdir@/configure.in
-	$(MAKE) $(AM_MAKEFLAGS) commit
+UPLOAD_BIN =
+UPLOAD_SRC = upload-gzip upload-bzip2 upload-zip
+UPLOAD_TARGETS = \
+{gzip=>@PACKAGE@-@VERSION@.tar.gz} \
+{bzip2=>@PACKAGE@-@VERSION@.tar.bz2} \
+{zip=>@PACKAGE@-@VERSION@.zip}
+include $(top_srcdir)/config.aux/sf.am
 
-release:	update distcheck add_rel commit dist upload tag 
 
-quick-release:	update add_rel commit upload tag commit
+include $(top_srcdir)/config.aux/cvs.am
 
-tag: do_tag inc_rel
+#MSI_SETUP_FILE=Setup/Release/@PACKAGE_NAME@Setup.msi
+#include $(top_srcdir)/config.aux/msi.am
 
-do_tag:
-	tag=`echo @PACKAGE@-@VERSION@ | sed s/\\\\./_/g`; \
-	echo "tagging release branch with $$tag"; \
-	echo `cvs tag $$tag`;	
-
-add_rel:
-	if test "$$USERNAME" = ""; then \
-	    USERNAME="$$USER"; fi; \
-	if test "$$USEREMAIL" = ""; then \
-	    USEREMAIL="sserver-admin@lists.sf.net"; fi; \
-	DATE=`date +"%Y-%m-%d"`; \
-	LOGHEADER=`echo -e "$$DATE\t$$USERNAME\t<$$USEREMAIL>\n"`; \
-	echo -e "$$LOGHEADER\n\n\t* ./configure.in\n\tReleased @PACKAGE@-@VERSION@\n" \
-	| cat - @srcdir@/ChangeLog > ChangeLog.tmp
-	mv ChangeLog.tmp @srcdir@/ChangeLog
-
-inc_rel:
-	$(AWK) -f @srcdir@/rel.awk -v change=3 @srcdir@/configure.in > configure.tmp;
-	mv configure.tmp @srcdir@/configure.in
-	$(MAKE) $(AM_MAKEFLAGS) commit
-
-upload:	@PACKAGE@-@VERSION@.tar.gz
-	ncftpput -v upload.sourceforge.net /incoming @PACKAGE@-@VERSION@.tar.gz
-
-@PACKAGE@-@VERSION@.tar.gz: dist
-
-update:
-	cvs -z9 update
-
-commit: update
-	$(AWK) '/^[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]/ { count++ } { if ( count == 1 ) print $0 }' @srcdir@/ChangeLog > message.tmp
-	cvs -z9 commit -F message.tmp
-
-addlog:
-	if test "$$USERNAME" = ""; then \
-	    USERNAME="$$USER"; \
-	fi; \
-	if test "$$USEREMAIL" = ""; then \
-	    USEREMAIL="sserver-admin@lists.sf.net"; \
-	fi; \
-	cvs -z9 diff -u --brief 2>&1 | $(AWK) '\
-	/^Index/ { print "\t* ./" $$2 } \
-	/^cvs server: .* is a new entry/ { print "\t* ./" $$3 }' \
-	> @srcdir@/addlog.tmp;
-	if test -s @srcdir@/addlog.tmp; then \
-		DATE=`date +"%Y-%m-%d"`; \
-		echo -e "$$DATE\t$$USERNAME\t<$$USEREMAIL>\n" \
-		> ChangeLog.tmp; \
-		cat @srcdir@/addlog.tmp >> ChangeLog.tmp; \
-		echo "" >> ChangeLog.tmp; \
-		cat @srcdir@/ChangeLog >> ChangeLog.tmp; \
-		mv ChangeLog.tmp @srcdir@/ChangeLog; \
-		if test -n "$(CVSEDITOR)"; then $(CVSEDITOR) ChangeLog; \
-		elif test -n "$(VISUAL)"; then $(VISUAL) ChangeLog; \
-		elif test -n "$(EDITOR)"; then $(EDITOR) ChangeLog; \
-		else \
-			EDITOR=`which vi`; \
-			if test -n "$$EDITOR" && test -x "$$EDITOR"; then \
-				$$EDITOR ChangeLog; \
-			else \
-				echo ""; \
-				echo "Cannot find an editor."; \
-				echo "Please edit ChangeLog manually\n"; \
-			fi; \
-		fi; \
-	fi
+#include $(top_srcdir)/config.aux/rpm.am
 
