* lib/kerosin/         * lib/kerosin/sceneserver/         * lib/kerosin/renderserver/         * lib/oxygen/sceneserver/         - removed render method from indexbuffer         - removed duplicate kerosin indexbuffer         - the staticmesh now uses the doxygen indexbuffer         - some compile fixes

--- a/lib/oxygen/Makefile.am
+++ b/lib/oxygen/Makefile.am
@@ -53,6 +53,7 @@ sceneserver/scene.cpp \
 sceneserver/scene_c.cpp \
 sceneserver/sceneserver.cpp \
 sceneserver/sceneserver_c.cpp \
+sceneserver/indexbuffer.cpp \
 sceneserver/transform.cpp \
 sceneserver/transform_c.cpp
 
@@ -81,6 +82,7 @@ sceneserver/basenode.h \
 sceneserver/fpscontroller.h \
 sceneserver/scene.h \
 sceneserver/sceneserver.h \
+sceneserver/indexbuffer.h \
 sceneserver/transform.h
 
 ### sceneserver/camera.h 
