2003-09-10	Tom Howard	<tomhoward@users.sf.net>
	* ./app/simulator/Makefile.am
	* ./app/simulator/main.cpp
	* ./lib/kerosin/Makefile.am
	* ./lib/kerosin/fontserver/font.cpp
	* ./lib/kerosin/inputserver/inputsystem.cpp
	* ./lib/kerosin/renderserver/renderserver.cpp
	* ./lib/kerosin/sceneserver/camera_c.cpp
	* ./lib/kerosin/sceneserver/helper/NVMeshMender.cpp
	* ./lib/oxygen/agentaspect/agentaspect.h
	* ./lib/salt/bounds.h
	* ./lib/salt/frustum.cpp
	* ./lib/salt/gmath.h
	* ./lib/salt/matrix.h
	* ./lib/salt/tvector.h
	* ./lib/salt/vector.h
	* ./lib/zeitgeist/leaf.cpp
	* ./lib/zeitgeist/fileserver/fileserver_c.cpp
	* ./lib/zeitgeist/scriptserver/scriptserver.cpp
	Fixed some build warnings and errors

--- a/lib/kerosin/Makefile.am
+++ b/lib/kerosin/Makefile.am
@@ -58,12 +58,16 @@ sceneserver/staticmesh.cpp \
 sceneserver/staticmesh_c.cpp \
 soundserver/soundserver.cpp \
 soundserver/soundserver_c.cpp \
+soundserver/transform.cpp \
+soundserver/transform_c.cpp \
 textureserver/texture.cpp \
 textureserver/texture2d.cpp \
 textureserver/textureserver.cpp \
 textureserver/textureserver_c.cpp \
 openglserver/openglserver.cpp \
-openglserver/openglserver_c.cpp 
+openglserver/openglserver_c.cpp \
+renderserver/renderserver.cpp \
+renderserver/renderserver_c.cpp
 
 nobase_libpkginclude_HEADERS = \
 agentaspect/visionperceptor.h \
@@ -80,7 +84,6 @@ kerosin.h \
 materialserver/material.h \
 materialserver/materialserver.h \
 sceneserver/axis.h \
-sceneserver/camera.h \
 sceneserver/helper/NVMeshMender.h \
 sceneserver/helper/nv_math/nv_algebra.h \
 sceneserver/helper/nv_math/nv_math.h \
@@ -96,4 +99,7 @@ soundserver/soundsystem.h \
 textureserver/texture.h \
 textureserver/texture2d.h \
 textureserver/textureserver.h \
-openglserver/openglserver.h
+openglserver/openglserver.h \
+renderserver/renderserver.cpp
+
+#sceneserver/camera.h \
