--- a/app/simulator/Makefile.am
+++ b/app/simulator/Makefile.am
@@ -1,9 +1,13 @@
 bin_PROGRAMS = simulator
 
 if DEBUG
-LDADD = ${top_srcdir}/lib/kerosin/libkerosin_debug.la
+LDADD = ${top_srcdir}/lib/kerosin/libkerosin_debug.la \
+${top_srcdir}/lib/oxygen/liboxygen_debug.la \
+${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la
 else
-LDADD = ${top_srcdir}/lib/kerosin/libkerosin.la
+LDADD = ${top_srcdir}/lib/kerosin/libkerosin.la \
+${top_srcdir}/lib/oxygen/liboxygen.la \
+${top_srcdir}/lib/zeitgeist/libzeitgeist.la
 endif
 
 AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@
