2003-09-11	Tom Howard	<tomhoward@users.sf.net>
	* ./configure.ac
	* ./lib/kerosin/openglserver/openglserver.cpp
	* ./lib/kerosin/renderserver/renderserver_c.cpp
	* ./lib/kerosin/textureserver/textureserver.h
	* ./utility/glextgen/script/glbackend.rb
	More hacking to try to get it to compile

--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,8 @@ GLDIR=`dirname "$GLDIR"`
 AC_SUBST([GLDIR], [$GLDIR])
 AC_CHECK_FILE([$GLDIR/glx.h])
 
+AC_CHECK_LIB(gllib,glEnable)
+
 AC_CHECK_HEADER([boost/version.hpp],,
   AC_MSG_ERROR([boost library not found. Please specify the location 
 of the boost header directory using the CPPFLAGS environment variable]))
