- added RUBY_CPPFLAGS

--- a/app/simulator/Makefile.am
+++ b/app/simulator/Makefile.am
@@ -3,13 +3,15 @@ bin_PROGRAMS = simulator
 if DEBUG
 LDADD = ${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 ${top_srcdir}/lib/oxygen/liboxygen_debug.la \
-${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la
+${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
+-lGL
 else
 LDADD = ${top_srcdir}/lib/kerosin/libkerosin.la \
 ${top_srcdir}/lib/oxygen/liboxygen.la \
-${top_srcdir}/lib/zeitgeist/libzeitgeist.la
+${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
+-lGL
 endif
 
-AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 
 simulator_SOURCES = main.cpp
