--- a/lib/kerosin/Makefile.am
+++ b/lib/kerosin/Makefile.am
@@ -10,7 +10,7 @@ libkerosin_la_CXXFLAGS = -O2
 libkerosin_la_LIBADD = @FREETYPE_LIBADD@ 
 endif
 
-AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 
 ## define include directory local to the pkgincludedir
 libpkgincludedir = $(includedir)/@PACKAGE@/kerosin
