--- a/plugin/survival/Makefile.am
+++ b/plugin/survival/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libsurvival.la
 
-AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 
 ## define include directory local to the pkgincludedir
 libpkgincludedir = $(includedir)/@PACKAGE@/survival
