- added sceneserver/helper/nv_algebra.cpp

--- a/lib/kerosin/Makefile.am
+++ b/lib/kerosin/Makefile.am
@@ -10,7 +10,7 @@ libkerosin_la_CXXFLAGS = -O2
 libkerosin_la_LIBADD = @FREETYPE_LIBADD@ 
 endif
 
-AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib -I$(top_srcdir)/lib/kerosin/sceneserver/helper @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 
 ## define include directory local to the pkgincludedir
 libpkgincludedir = $(includedir)/@PACKAGE@/kerosin
@@ -52,6 +52,7 @@ materialserver/materialserver_c.cpp \
 sceneserver/axis.cpp \
 sceneserver/axis_c.cpp \
 sceneserver/helper/NVMeshMender.cpp \
+sceneserver/helper/nv_algebra.cpp \
 sceneserver/light.cpp \
 sceneserver/light_c.cpp \
 sceneserver/staticmesh.cpp \
