removed trailing backslash

--- a/lib/kerosin/Makefile.am
+++ b/lib/kerosin/Makefile.am
@@ -104,4 +104,4 @@ textureserver/textureserver.h \
 openglserver/openglserver.h \
 renderserver/renderserver.cpp
 
-#sceneserver/camera.h \
+#sceneserver/camera.h 
